# Team-D_group_project

./: .gitignore  README.md
group_d_ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
group_d_ros2_ws/install/battery_monitoring_12200335/share/battery_monitoring_12200335/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
group_d_ros2_ws/log/: latest_build
group_d_ros2_ws/src/battery_monitoring_12200335/: setup.cfg  setup.py
group_d_ros2_ws/src/battery_monitoring_12200335/battery_monitoring_12200335/: battery_state_checker.py
group_d_ros2_ws/src/battery_monitoring_12200335/launch/: battery.launch.py
group_d_ros2_ws/src/battery_monitoring_12200335/py_tests/: battery_monitoring_test.py
group_d_ros2_ws/src/cam_interface/: CMakeLists.txt  package.xml
group_d_ros2_ws/src/cam_pub_sub/: setup.cfg  setup.py
group_d_ros2_ws/src/cam_pub_sub/cam_pub_sub/: cam_sub.py
group_d_ros2_ws/src/cam_pub_sub/launch/: cam_launch.py
group_d_ros2_ws/src/emotion_recognition/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
group_d_ros2_ws/src/emotion_recognition/bag_files/: metadata.yaml  rosbag.db3
group_d_ros2_ws/src/emotion_recognition/emotion_recognition/: camera_node.py  cli.py
group_d_ros2_ws/src/emotion_recognition/launch/: emotion_recognition_system_launch.py
group_d_ros2_ws/src/emotion_recognition/msg/: emotion.msg
group_d_ros2_ws/src/emotion_recognition/tests/: test_camera_node.py  test_emotion_recognition_node.py
group_d_ros2_ws/src/gesture_interface/: CMakeLists.txt
group_d_ros2_ws/src/gesture_pub_sub/: package.xml  setup.cfg  setup.py
group_d_ros2_ws/src/gesture_pub_sub/gesture_pub_sub/: ges_pub.py
group_d_ros2_ws/src/gesture_pub_sub/launch/: gesture_turtlesim_launch.py
group_d_ros2_ws/src/gesture_pub_sub/test/: test_pep257.py_Zone.Identifier
group_d_ros2_ws/src/lane_keeping/: package.xml  setup.cfg  setup.py
group_d_ros2_ws/src/lane_keeping/tests/: test_custom.py
group_d_ros2_ws/src/logging_monitoring/: cli.py  package.xml  setup.cfg  setup.py
group_d_ros2_ws/src/logging_monitoring/launch/: battery_power._launch.py  emotion_recognition_launch.py  gesture_recognition_monitor_launch.py  logging_node_launch.py  obstacle_avoidance_launch.py  sensor_data_simulator_launch.py  voice_recognition_monitor_launch.py
group_d_ros2_ws/src/logging_monitoring/logging_monitoring/: battery_power_node.py  emotion_recognition.py  obstacle_avoidance.py  sensor_data_simulator.py  voice_recognition_monitor_node.py
group_d_ros2_ws/src/logging_monitoring/test/: test_battery_power_node.py  test_emotion_recognition.py  test_gesture_recognition_monitor_node.py  test_logging_node.py  test_obstacle_avoidance.py  test_sensor_data_simulator.py  test_voice_recognition_monitor_node.py
group_d_ros2_ws/src/obstackle_avoidance/: setup.cfg  setup.py
group_d_ros2_ws/src/obstackle_avoidance/launch/: collision_avoidance.launch.py  wall_following.launch.py
group_d_ros2_ws/src/obstackle_avoidance/obstackle_avoidance/: obstacle_avoidance.py
group_d_ros2_ws/src/obstackle_avoidance/tests/: test_custom.py
group_d_ros2_ws/src/room_temperature_pkg/: package.xml  setup.cfg  setup.py
group_d_ros2_ws/src/room_temperature_pkg/py_test_file/: test_room_temperature.py
group_d_ros2_ws/src/room_temperature_pkg/room_temperature_bag_file/: metadata.yaml  room_temperature_bag_file_0.db3
group_d_ros2_ws/src/room_temperature_pkg/room_temperature_pkg/: temp_subscriber.py
group_d_ros2_ws/src/ros2_weather_talk/: setup.cfg  setup.py
group_d_ros2_ws/src/ros2_weather_talk/launch/: weather_talk_launch.py
group_d_ros2_ws/src/ros2_weather_talk/py_test_weather/: py_test_weather.py
group_d_ros2_ws/src/ros2_weather_talk/ros2_weather_talk/: weather_talk_publisher.py
group_d_ros2_ws/src/ros2_weather_talk/weather_talk_bagfile/: metadata.yaml  weather_talk_bagfile_0.db3
group_d_ros2_ws/src/voice_recognition/: package.xml  setup.cfg  setup.py
group_d_ros2_ws/src/voice_recognition/launch/: client.launch.py  server.launch.py
(+159 files in other folders)
