<?xml version="1.0"?> <!-- Done by Vakhitov Akbarali 12200312 -->
<?xml-model xmlns="http://www.ros.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.ros.org/package.xsd http://www.ros.org/schema/package.xsd"?>
<package format="3">
  <name>emotion_recognition</name>
  <version>0.0.0</version>
  <description>ROS 2 Emotion Recognition Package</description>
  <maintainer email="vahidovakbarali@gmail.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>colcon</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

